# Agent_Karuppu_2.0

./: .env.example  .gitignore  DEPLOYMENT.md  deployment_report.md  deployment_verification_report.md  docker-compose.yml  migration_report.md  netlify.toml  package.json  pyproject.toml  pyrightconfig.json  queue_worker_diagnostic_report.md  render.yaml  run_local.bat  spa_routing_report.md  supabase_migration_report.md
.github/workflows/: codeql.yml
backend/: backend.Dockerfile  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0c3c627a54fd_saas_rearchitecture.py  7471c00fe2b8_initial_schema_setup.py
backend/app/: celery_app.py  config.py  database.py  gemini.py  git_sync.py  instagram.py  main.py  models.py  s3.py  schemas.py  security.py  supabase_storage.py  tasks.py  utils.py  worker_service.py
backend/app/crew/: agents.yaml  crew.py  tasks.yaml  tools.py
frontend/: frontend.Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.jsx  App.tsx  config.js  config.ts  index.css
frontend/src/components/: BrandLogo.tsx  EngagementCenter.tsx  FollowManagement.tsx  GroupTokenManager.tsx  PublishingStatusPanel.tsx
frontend/src/pages/: Accounts.jsx  Accounts.tsx  Admin.jsx  Dashboard.jsx  Dashboard.tsx  History.tsx  Login.jsx  Login.tsx  Logs.jsx  Logs.tsx  OTP.jsx  Profile.jsx  Requests.jsx  Settings.tsx  Signup.jsx  Signup.tsx  Tokens.tsx  UserManagement.tsx
