[project]
name = "agent-karuppu"
version = "2.0.0"
description = "Instagram Automation & Publishing Agent"
requires-python = ">=3.10"

[tool.pyright]
venvPath = "."
venv = "venv"
extraPaths = ["backend"]
typeCheckingMode = "off"
reportGeneralTypeIssues = false
reportAttributeAccessIssue = false
executionEnvironments = [
  { root = "backend" }
]
